# motif

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PHASE_STATUS.md  PROJECT_STATUS.md  README.md  SKILL.md  THIRD_PARTY_SOURCES.md  install.sh  package.json  pyproject.toml
agents/: accessibility-specialist.md  design-system-architect.md  framework-engineer.md  governance-agent.md  performance-engineer.md  product-strategist.md  security-reviewer.md  visual-qa-agent.md
connectors/: README.md
docs/: MASTER_SPEC.md  architecture.md  capability-matrix.md  component-authoring.md  effect-authoring.md  evaluation-methodology.md  framework-adaptation.md  pattern-authoring.md  recipe-authoring.md  release-process.md  research-methodology.md  source-review.md  threat-model.md
governance/: README.md
ii/: __init__.py  apprunner.py  browser.py  cli.py  cli_v3.py  data.py  evidence.py  guardian.py  mcp.py  repair.py
ingestion/: README.md
interaction-intelligence/: README.md
motif/: __init__.py  __main__.py  install.py  project.py
oii/: __init__.py  cli.py  doctor.py  install.py  jsonschema_min.py  registry.py  yaml_min.py
policies/: accessibility.yml  enterprise-ui.yml  licensing.yml  marketing-ui.yml  performance.yml
product-intelligence/: README.md
providers/: README.md
registry/: INDEX.json  INDEX.md
scanners/: __init__.py  behaviour_scanner.py  dependency_scanner.py  license_scanner.py  secret_scanner.py  source_scanner.py
schemas/: assurance-evidence.schema.json  colour-system.schema.json  component.schema.json  debt-finding.schema.json  (+21 more)
(+407 files in other folders)
